syntax = "proto3";

package bible;

message Tag{
    int32 id = 1;
    int32 owner = 2;

    int64 created = 4;
    int64 modified = 5;

    string start = 6;
    string end = 7;

    int32 book = 8;
    int32 chapter = 9;

    string type = 10;
    string subtype = 11;

    oneof tag{
        WhatTag     whatTag = 12;
        WhoTag      whoTag = 13;
        WhereTag    whereTag = 14;
        WhenTag     whenTag = 15;
        HowTag      howTag = 16;
    }
}

message Tags{
    repeated Tag tags = 1;
}

message WhatTag{
    string what = 1;
    string details = 2;
}

message WhoTag{
    int32 who = 1;
}

message WhereTag{
    string where = 1;
    double latitude = 2;
    double longitude = 3;
}

message WhenTag{
    int32 year = 1;
}

message HowTag{
    string how = 1;
    string details = 2;
}

